--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ torchvision = "*"
 [tool.poetry.dev-dependencies]
 black = "*"
 flake8 = "*"
-isort = "*"
+isort = "^5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
