--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ torchvision = "*"
 black = "*"
 flake8 = "*"
 isort = "^5"
+commitizen = "^2.37.0"
+pre-commit = "^2.20.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -34,3 +36,17 @@ profile = "black"
 force_sort_within_sections = true
 line_length = 88
 known_third_party = "bnn"
+
+[tool.commitizen]
+name = "cz_conventional_commits_ronmckay"
+version = "0.1.0"
+tag_format = "v$version"
+major_version_zero = true
+version_files = [
+    "pyproject.toml:^version"
+]
+update_changelog_on_bump = true
+changelog_incremental = true
+annotated_tag = true
+use_shortcuts = true
+bump_message = "bump: Version $current_version → $new_version"
